--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
+        android:enableOnBackInvokedCallback="true"
         android:label="docsafe"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
@@ -22,6 +23,10 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="io.supabase.ekyjocxsvvedoxxwzllt"/>
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
