--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   motion_toast:
   flutter_credit_card: ^4.0.1
   carousel_slider: ^4.2.1
+  get_storage:
 
 dev_dependencies:
   flutter_test:
