--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter_credit_card: ^4.0.1
   carousel_slider: ^4.2.1
   get_storage:
+  permission_handler: ^11.1.0
+  path_provider:
 
 dev_dependencies:
   flutter_test:
