--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   image_picker:
   file_picker:
   syncfusion_flutter_pdfviewer: ^23.2.7
+  video_player: ^2.8.1
 
 dev_dependencies:
   flutter_test:
