--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   image_picker:
   file_picker:
   syncfusion_flutter_pdfviewer: ^23.2.7
-  video_player: ^2.8.1
+  open_file: ^3.3.2
 
 dev_dependencies:
   flutter_test:
