--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.access_media_location"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
 
     <application
         android:requestLegacyExternalStorage="true"
@@ -43,15 +44,13 @@
                 android:resource="@style/NormalTheme" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <!-- Accepts URIs that begin with YOUR_SCHEME://YOUR_HOST -->
-                <data
-                    android:host="login-callback"
-                    android:scheme="io.supabase.ekyjocxsvvedoxxwzllt" />
+<!--                <data-->
+<!--                    android:host="login-callback"-->
+<!--                    android:scheme="io.supabase.ekyjocxsvvedoxxwzllt" />-->
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
