--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,6 @@ dependencies:
   fluttertoast: ^8.2.2
   motion_toast:
   flutter_credit_card: ^4.0.1
-  carousel_slider: ^4.2.1
   get_storage:
   permission_handler: ^11.1.0
   path_provider:
@@ -30,6 +29,7 @@ dependencies:
   file_picker:
   syncfusion_flutter_pdfviewer: ^23.2.7
   open_file: ^3.3.2
+  flutter_screen_lock: ^9.0.1
 
 dev_dependencies:
   flutter_test:
