--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,7 +23,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.docsafe.app"
+    namespace "com.example.docsafe"
     compileSdkVersion 33
     ndkVersion flutter.ndkVersion
 
@@ -46,7 +46,7 @@ android {
 //         For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 21
         targetSdkVersion 33
-        versionCode 2
+        versionCode 3
         versionName flutterVersionName
     }
 
