Run Issue Solve In IOS

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ flutter:
     - assets/images/
     - assets/icons/
 
+ios:
+  deployment_target: '9.0'
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
