--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,8 +23,8 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.example.docsafe"
-    compileSdkVersion 33
+    namespace "com.docsafe.app"
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -45,8 +45,8 @@ android {
 //         You can update the following values to match your application needs.
 //         For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 21
-        targetSdkVersion 33
-        versionCode 5
+        targetSdkVersion 34
+        versionCode 6
         versionName flutterVersionName
     }
 
