--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,7 +23,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.docsafe.app"
+    namespace "com.example.docsafe"
     compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
@@ -46,12 +46,16 @@ android {
 //         For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 21
         targetSdkVersion 34
-        versionCode 6
+        versionCode 7
         versionName flutterVersionName
     }
 
     buildTypes {
-
+        release {
+            // TODO: Add your own signing config for the release build.
+            // Signing with the debug keys for now, so `flutter run --release` works.
+            signingConfig signingConfigs.debug
+        }
     }
 }
 
